--- a/example/src/main/res/values/styles.xml
+++ b/example/src/main/res/values/styles.xml
@@ -6,4 +6,13 @@
         <item name="colorAccent">@color/accent</item>
     </style>
 
+    <style name="Button">
+        <item name="android:background">@drawable/selector_button</item>
+        <item name="android:foreground">?selectableItemBackground</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">#fff</item>
+    </style>
+
 </resources>
