Improve Goldfinger API, rewrite tests, bump deps

--- a/example/src/main/res/values/colors.xml
+++ b/example/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="error">#c21d1d</color>
     <color name="ok">#21a921</color>
     <color name="textRegular">#333</color>
-    <color name="warning">@color/primaryDark</color>
+    <color name="info">#258A60</color>
 </resources>
