--- a/example/src/main/res/layout/activity_login.xml
+++ b/example/src/main/res/layout/activity_login.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:gravity="center"
+        android:hint="PIN"
         android:inputType="number"
         android:maxLength="4"
         android:padding="16dp"
