--- a/example/src/main/res/layout/activity_payment.xml
+++ b/example/src/main/res/layout/activity_payment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -13,13 +14,14 @@
         />
 
     <TextView
-        android:id="@+id/userAuthenticatedView"
+        android:id="@+id/userResultView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="User authenticated"
-        android:textColor="#33aa33"
+        android:textColor="#777"
         android:textSize="18sp"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        tools:text="Result"
+        tools:visibility="visible"/>
 
 </LinearLayout>
