--- a/example/src/main/res/layout/activity_choose_implementation.xml
+++ b/example/src/main/res/layout/activity_choose_implementation.xml
@@ -14,32 +14,55 @@
         android:text="Available authenticators:"
         android:textStyle="bold"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:text="Strong"
-        android:textStyle="bold"/>
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/strongAuthenticator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"/>
+        <CheckBox
+            android:id="@+id/strongCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Strong "
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/strongAuthenticator"
+            android:layout_width="wrap_content"
+            android:paddingBottom="8dp"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginHorizontal="16dp"
-        android:text="Weak"
-        android:textStyle="bold"/>
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/weakAuthenticator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"/>
+        <CheckBox
+            android:id="@+id/weakCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Weak "
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/weakAuthenticator"
+            android:layout_width="wrap_content"
+            android:paddingBottom="8dp"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/examples"
