--- a/example/src/main/res/layout/activity_choose_implementation.xml
+++ b/example/src/main/res/layout/activity_choose_implementation.xml
@@ -64,6 +64,31 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/deviceCredentialsCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Device Credentials "
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/deviceCredentialsAuthenticator"
+            android:layout_width="wrap_content"
+            android:paddingBottom="8dp"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
     <TextView
         android:id="@+id/examples"
         android:layout_width="wrap_content"
