--- a/example/src/main/res/layout/activity_settings.xml
+++ b/example/src/main/res/layout/activity_settings.xml
@@ -45,11 +45,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Fingerprint Login"
+            android:text="Biometric Login"
             />
 
         <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/fingerprintSwitchView"
+            android:id="@+id/biometricSwitchView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
